# under-the-microscope-custom-users

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
customuser/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
customuser/migrations/: 0001_initial.py
customuser/templates/: adduser_form.html  base.html  generic_form.html  index.html  login_form.html
under_the_microscope/: asgi.py  settings.py  urls.py  wsgi.py
