[tool.poetry]
name = "todo-backend-custom-users"
version = "0.1.0"
description = "Learning about Django Custom Users"
authors = ["Karen Marvel <knmarvel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
flake8 = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
